[package]
name = "streamium-importer"
version = "0.1.0"
authors = ["Juri Berlanda <juriberlanda@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamium-db = { path = "../streamium-db" }
id3 = "0.3.0"
dotenv = "0.9.0"
diesel = { version = "1.4.3", features = ["postgres"] }
