[package]
name = "streamium-importer"
version = "0.1.1"
authors = ["Juri Berlanda <juriberlanda@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamium-db = { path = "../streamium-db" }
id3 = "0.5.1"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres"] }
urlencoding = "1.0.0"
