[package]
name = "streamium-importer"
version = "0.1.1"
authors = ["Juri Berlanda <juriberlanda@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamium-db = { path = "../streamium-db" }
id3 = "1.1.3"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres"] }
urlencoding = "2.1.0"
